--- a/templates/search.html
+++ b/templates/search.html
@@ -302,7 +302,7 @@
       <p>Crafting exceptional shopping experiences for our valued customers.</p>
     </div>
     <div>
-      <h3>Contact Us</h3>
+      <h3>Contact with Us</h3>
       <p>📍 380/F Leyland Junction, Panagoda Homagama</p>
       <p>📞 0773659784</p>
       <p>📧 TescoFoodCity@gmail.com</p>
