--- a/templates/search.html
+++ b/templates/search.html
@@ -486,23 +486,28 @@
 
         <a href="{{ url_for('product_detail', product_id=2) }}" class="product-link">
             <div class="product-card">
+            
                 <img src="{{ url_for('static', filename='images/product/product2.jpeg') }}">
+                </a>
                 <div class="product-name">Coca Cola 1.5L</div>
                 <div class="product-price">Rs.400.00</div>
             </div>
-        </a>
+        
 
         <a href="{{ url_for('product_detail', product_id=3) }}" class="product-link">
             <div class="product-card">
+              
                 <img src="{{ url_for('static', filename='images/product/product3.jpeg') }}">
+                </a>
                 <div class="product-name">Carrot 500g</div>
                 <div class="product-price">Rs.160.00</div>
             </div>
-        </a>
+        
 
         <a href="{{ url_for('product_detail', product_id=4) }}" class="product-link">
             <div class="product-card">
                 <img src="{{ url_for('static', filename='images/product/product4.png') }}">
+                </a>
                 <div class="product-name">Oreo Biscuits</div>
                 <div class="product-price">Rs.250.00</div>
             </div>
@@ -520,6 +525,166 @@
     </div>
 
 </a>
+<a href="{{ url_for('product_detail', product_id=6) }}" class="product-link">
+    <div class="product-card">
+        <img src="{{ url_for('static', filename='images/product/product6.jpg') }}">
+        <div class="product-name">Sunlight Soap 120g</div>
+        <div class="product-price">Rs.180.00</div>
+    </div>
+</a>
+
+<a href="{{ url_for('product_detail', product_id=7) }}" class="product-link">
+    <div class="product-card">
+        <img src="{{ url_for('static', filename='images/product/product7.jpg') }}">
+        <div class="product-name">Noodles Pack</div>
+        <div class="product-price">Rs.90.00</div>
+    </div>
+</a>
+
+<a href="{{ url_for('product_detail', product_id=8) }}" class="product-link">
+    <div class="product-card">
+        <img src="{{ url_for('static', filename='images/product/product8.jpg') }}">
+        <div class="product-name">Rice 5kg</div>
+        <div class="product-price">Rs.2,200.00</div>
+    </div>
+</a>
+
+<a href="{{ url_for('product_detail', product_id=9) }}" class="product-link">
+    <div class="product-card">
+        <img src="{{ url_for('static', filename='images/product/product9.jpg') }}">
+        <div class="product-name">Anchor Butter 250g</div>
+        <div class="product-price">Rs.1,050.00</div>
+    </div>
+</a>
+
+<a href="{{ url_for('product_detail', product_id=10) }}" class="product-link">
+    <div class="product-card">
+        <img src="{{ url_for('static', filename='images/product/product10.jpg') }}">
+        <div class="product-name">Sunquick Orange 1L</div>
+        <div class="product-price">Rs.1,350.00</div>
+    </div>
+</a>
+
+<a href="{{ url_for('product_detail', product_id=11) }}" class="product-link">
+    <div class="product-card">
+        <img src="{{ url_for('static', filename='images/product/product11.jpg') }}">
+        <div class="product-name">Dhal 1kg</div>
+        <div class="product-price">Rs.420.00</div>
+    </div>
+</a>
+
+<a href="{{ url_for('product_detail', product_id=12) }}" class="product-link">
+    <div class="product-card">
+        <img src="{{ url_for('static', filename='images/product/product12.jpg') }}">
+        <div class="product-name">Fresh Eggs (6 Pack)</div>
+        <div class="product-price">Rs.360.00</div>
+    </div>
+</a>
+
+<a href="{{ url_for('product_detail', product_id=13) }}" class="product-link">
+    <div class="product-card">
+        <img src="{{ url_for('static', filename='images/product/product13.jpg') }}">
+        <div class="product-name">Lipton Tea 200g</div>
+        <div class="product-price">Rs.980.00</div>
+    </div>
+</a>
+
+<a href="{{ url_for('product_detail', product_id=14) }}" class="product-link">
+    <div class="product-card">
+        <img src="{{ url_for('static', filename='images/product/product14.jpg') }}">
+        <div class="product-name">Shampoo 180ml</div>
+        <div class="product-price">Rs.550.00</div>
+    </div>
+</a>
+
+<a href="{{ url_for('product_detail', product_id=15) }}" class="product-link">
+    <div class="product-card">
+        <img src="{{ url_for('static', filename='images/product/product15.jpg') }}">
+        <div class="product-name">Dettol Handwash</div>
+        <div class="product-price">Rs.420.00</div>
+    </div>
+</a>
+
+<a href="{{ url_for('product_detail', product_id=16) }}" class="product-link">
+    <div class="product-card">
+        <img src="{{ url_for('static', filename='images/product/product16.jpg') }}">
+        <div class="product-name">Toothpaste 150g</div>
+        <div class="product-price">Rs.260.00</div>
+    </div>
+</a>
+
+<a href="{{ url_for('product_detail', product_id=17) }}" class="product-link">
+    <div class="product-card">
+        <img src="{{ url_for('static', filename='images/product/product17.jpg') }}">
+        <div class="product-name">Cooking Oil 1L</div>
+        <div class="product-price">Rs.820.00</div>
+    </div>
+</a>
+
+<a href="{{ url_for('product_detail', product_id=18) }}" class="product-link">
+    <div class="product-card">
+        <img src="{{ url_for('static', filename='images/product/product18.jpg') }}">
+        <div class="product-name">Sugar 1kg</div>
+        <div class="product-price">Rs.310.00</div>
+    </div>
+</a>
+
+<a href="{{ url_for('product_detail', product_id=19) }}" class="product-link">
+    <div class="product-card">
+        <img src="{{ url_for('static', filename='images/product/product19.jpg') }}">
+        <div class="product-name">Salt 1kg</div>
+        <div class="product-price">Rs.120.00</div>
+    </div>
+</a>
+
+<a href="{{ url_for('product_detail', product_id=20) }}" class="product-link">
+    <div class="product-card">
+        <img src="{{ url_for('static', filename='images/product/product20.jpg') }}">
+        <div class="product-name">Wheat Flour 1kg</div>
+        <div class="product-price">Rs.290.00</div>
+    </div>
+</a>
+
+<a href="{{ url_for('product_detail', product_id=21) }}" class="product-link">
+    <div class="product-card">
+        <img src="{{ url_for('static', filename='images/product/product21.jpg') }}">
+        <div class="product-name">Green Tea Pack</div>
+        <div class="product-price">Rs.650.00</div>
+    </div>
+</a>
+
+<a href="{{ url_for('product_detail', product_id=22) }}" class="product-link">
+    <div class="product-card">
+        <img src="{{ url_for('static', filename='images/product/product22.jpg') }}">
+        <div class="product-name">Chocolate Bar</div>
+        <div class="product-price">Rs.180.00</div>
+    </div>
+</a>
+
+<a href="{{ url_for('product_detail', product_id=23) }}" class="product-link">
+    <div class="product-card">
+        <img src="{{ url_for('static', filename='images/product/product23.jpg') }}">
+        <div class="product-name">Fruit Juice 1L</div>
+        <div class="product-price">Rs.480.00</div>
+    </div>
+</a>
+
+<a href="{{ url_for('product_detail', product_id=24) }}" class="product-link">
+    <div class="product-card">
+        <img src="{{ url_for('static', filename='images/product/product24.jpg') }}">
+        <div class="product-name">Cheese Slices</div>
+        <div class="product-price">Rs.750.00</div>
+    </div>
+</a>
+
+<a href="{{ url_for('product_detail', product_id=25) }}" class="product-link">
+    <div class="product-card">
+        <img src="{{ url_for('static', filename='images/product/product25.jpg') }}">
+        <div class="product-name">Ambewela Fresh Milk 1L</div>
+        <div class="product-price">Rs.220.00</div>
+    </div>
+</a>
+
 
             <!-- New Products -->
             <div class="product-card">
