--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -89,7 +89,43 @@
   box-shadow: 0px 4px 12px rgba(0,0,0,0.2);
 }
 
+footer {
+  background: #2e7d32;
+  color: rgb(255, 255, 255);
+  padding: 30px 20px;
+  margin-top: 40px;
+}
 
+.footer-content {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    gap: 30px;
+}
+
+.footer-content h3 {
+    margin-bottom: 10px;
+}
+
+@media (max-width: 768px) {
+    .navbar {
+      flex-wrap: wrap;
+    }
+
+    .search-bar {
+      margin: 10px 0;
+      max-width: 100%;
+    }
+
+    .process-steps {
+      grid-template-columns: 1fr;
+    }
+    
+
+    .city-buttons {
+      justify-content: center;
+    }
+}
 
   </style>
 </head>
