--- a/templates/search.html
+++ b/templates/search.html
@@ -394,7 +394,11 @@
             </div>
             <div class="icons">
                 <i class="fa-solid fa-bell"></i>
-                <i class="fa-solid fa-cart-shopping"></i>
+              <!-- Cart Icon with link -->
+<a href="{{ url_for('cart') }}">
+    <i class="fa-solid fa-cart-shopping"></i>
+</a>
+
                 <!-- USER ICON: DYNAMIC LOGIN/ACCOUNT -->
                 {% if session.get('user') %}
                 <a href="{{ url_for('account') }}" title="Account" class="user-icon">
