--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -90,8 +90,8 @@
 }
 
 footer {
-  background: #2e7d32;
-  color: rgb(255, 255, 255);
+  background: hsl(123, 77%, 25%);
+  color: rgb(227, 215, 215);
   padding: 30px 20px;
   margin-top: 40px;
 }
