--- a/templates/checkout.html
+++ b/templates/checkout.html
@@ -255,7 +255,7 @@
     <!-- PAYMENT OPTIONS -->
     <div class="payment-box">
         <h2>Select Payment Method</h2>
-        <form method="POST" action="{{ url_for('place_order') }}" id="paymentForm">
+        <form method="POST" action="" id="paymentForm">
 
             <!-- PAYPAL -->
             <label class="payment-option">
