--- a/templates/search.html
+++ b/templates/search.html
@@ -395,7 +395,7 @@
             <div class="icons">
                 <i class="fa-solid fa-bell"></i>
               <!-- Cart Icon with link -->
-
+       <a href="{{ url_for('cart') }}">
     <i class="fa-solid fa-cart-shopping"></i>
 </a>
 
