--- a/templates/search.html
+++ b/templates/search.html
@@ -1019,6 +1019,402 @@
 <!-- Continue in the same format for product_id=61 → product_id=100 -->
 
 
+
+<a href="{{ url_for('product_detail', product_id=61) }}" class="product-link">
+    <div class="product-card">
+       
+        <img src="{{ url_for('static', filename='images/product/product61.jpg') }}">
+        </a>
+        <div class="product-name">Fresh Apples 1kg</div>
+        <div class="product-price">Rs.480.00</div>
+    </div>
+
+
+<a href="{{ url_for('product_detail', product_id=62) }}" class="product-link">
+    <div class="product-card">
+        <img src="{{ url_for('static', filename='images/product/product62.jpg') }}">
+        <div class="product-name">Banana 1kg</div>
+        <div class="product-price">Rs.220.00</div>
+    </div>
+</a>
+
+<a href="{{ url_for('product_detail', product_id=63) }}" class="product-link">
+    <div class="product-card">
+        <img src="{{ url_for('static', filename='images/product/product63.jpg') }}">
+        </a>
+        <div class="product-name">Orange 1kg</div>
+        <div class="product-price">Rs.360.00</div>
+    </div>
+
+<a href="{{ url_for('product_detail', product_id=64) }}" class="product-link">
+    <div class="product-card">
+        <img src="{{ url_for('static', filename='images/product/product64.jpg') }}">
+        <div class="product-name">Potato 1kg</div>
+        <div class="product-price">Rs.190.00</div>
+    </div>
+</a>
+
+<a href="{{ url_for('product_detail', product_id=65) }}" class="product-link">
+    <div class="product-card">
+       
+        <img src="{{ url_for('static', filename='images/product/product65.jpg') }}">
+      </a>
+        <div class="product-name">Onion 1kg</div>
+        <div class="product-price">Rs.210.00</div>
+    </div>
+
+
+<a href="{{ url_for('product_detail', product_id=66) }}" class="product-link">
+    <div class="product-card">
+        
+        <img src="{{ url_for('static', filename='images/product/product66.jpg') }}">
+       </a>
+        <div class="product-name">Garlic 250g</div>
+        <div class="product-price">Rs.260.00</div>
+</div>
+
+<a href="{{ url_for('product_detail', product_id=67) }}" class="product-link">
+    <div class="product-card">
+       
+        <img src="{{ url_for('static', filename='images/product/product67.jpg') }}">
+       </a>
+        <div class="product-name">Green Chillies 250g</div>
+        <div class="product-price">Rs.140.00</div>
+    </div>
+
+
+<a href="{{ url_for('product_detail', product_id=68) }}" class="product-link">
+    <div class="product-card">
+     
+        <img src="{{ url_for('static', filename='images/product/product68.jpg') }}">
+      </a>
+        <div class="product-name">Big Onion 1kg</div>
+        <div class="product-price">Rs.240.00</div>
+    </div>
+
+
+<a href="{{ url_for('product_detail', product_id=69) }}" class="product-link">
+    <div class="product-card">
+        <img src="{{ url_for('static', filename='images/product/product69.jpg') }}">
+       </a>
+        <div class="product-name">Fresh Chicken 1kg</div>
+        <div class="product-price">Rs.1,250.00</div>
+    </div>
+
+<a href="{{ url_for('product_detail', product_id=70) }}" class="product-link">
+    <div class="product-card">
+       
+        <img src="{{ url_for('static', filename='images/product/product70.jpg') }}">
+        </a>
+        <div class="product-name">Fresh Fish 1kg</div>
+        <div class="product-price">Rs.1,450.00</div>
+    </div>
+
+<a href="{{ url_for('product_detail', product_id=71) }}" class="product-link">
+    <div class="product-card">
+        <img src="{{ url_for('static', filename='images/product/product71.jpg') }}">
+      </a>
+        <div class="product-name">Sausages 500g</div>
+        <div class="product-price">Rs.780.00</div>
+    </div>
+
+
+<a href="{{ url_for('product_detail', product_id=72) }}" class="product-link">
+    <div class="product-card">
+       
+        <img src="{{ url_for('static', filename='images/product/product72.jpg') }}">
+       </a>
+        <div class="product-name">Ice Cream 1L</div>
+        <div class="product-price">Rs.950.00</div>
+    </div>
+
+
+<a href="{{ url_for('product_detail', product_id=73) }}" class="product-link">
+    <div class="product-card">
+        <img src="{{ url_for('static', filename='images/product/product73.jpg') }}">
+       </a>
+        <div class="product-name">Yoghurt 6 Pack</div>
+        <div class="product-price">Rs.300.00</div>
+    </div>
+
+
+<a href="{{ url_for('product_detail', product_id=74) }}" class="product-link">
+    <div class="product-card">
+        <img src="{{ url_for('static', filename='images/product/product74.jpg') }}">
+       </a>
+        <div class="product-name">Butter Cake</div>
+        <div class="product-price">Rs.420.00</div>
+    </div>
+
+
+<a href="{{ url_for('product_detail', product_id=75) }}" class="product-link">
+    <div class="product-card">
+        <img src="{{ url_for('static', filename='images/product/product75.jpg') }}">
+     </a>
+        <div class="product-name">Bread Loaf</div>
+        <div class="product-price">Rs.160.00</div>
+    </div>
+
+
+<a href="{{ url_for('product_detail', product_id=76) }}" class="product-link">
+    <div class="product-card">
+      
+        <img src="{{ url_for('static', filename='images/product/product76.jpg') }}">
+       </a> 
+        <div class="product-name">Jam Bottle</div>
+        <div class="product-price">Rs.390.00</div>
+    </div>
+
+
+<a href="{{ url_for('product_detail', product_id=77) }}" class="product-link">
+    <div class="product-card">
+        <img src="{{ url_for('static', filename='images/product/product77.jpg') }}">
+        <div class="product-name">Peanut Butter</div>
+        <div class="product-price">Rs.650.00</div>
+    </div>
+
+
+<a href="{{ url_for('product_detail', product_id=78) }}" class="product-link">
+    <div class="product-card">
+        <img src="{{ url_for('static', filename='images/product/product78.jpg') }}">
+        <div class="product-name">Instant Coffee 200g</div>
+        <div class="product-price">Rs.720.00</div>
+    </div>
+</a>
+
+<a href="{{ url_for('product_detail', product_id=79) }}" class="product-link">
+    <div class="product-card">
+        <img src="{{ url_for('static', filename='images/product/product79.jpg') }}">
+       </a>
+        <div class="product-name">Face Wash</div>
+        <div class="product-price">Rs.480.00</div>
+    </div>
+
+
+<a href="{{ url_for('product_detail', product_id=80) }}" class="product-link">
+    <div class="product-card">
+        <img src="{{ url_for('static', filename='images/product/product80.jpg') }}">
+       </a>
+        <div class="product-name">Body Lotion</div>
+        <div class="product-price">Rs.620.00</div>
+    </div>
+
+
+<a href="{{ url_for('product_detail', product_id=81) }}" class="product-link">
+    <div class="product-card">
+        <img src="{{ url_for('static', filename='images/product/product81.jpg') }}">
+       </a>
+        <div class="product-name">Face Cream</div>
+        <div class="product-price">Rs.750.00</div>
+    </div>
+
+
+<a href="{{ url_for('product_detail', product_id=82) }}" class="product-link">
+    <div class="product-card">
+        <img src="{{ url_for('static', filename='images/product/product82.jpg') }}">
+        </a>
+       <div class="product-name">Shower Gel</div>
+        <div class="product-price">Rs.520.00</div>
+    </div>
+
+<a href="{{ url_for('product_detail', product_id=83) }}" class="product-link">
+    <div class="product-card">
+        <img src="{{ url_for('static', filename='images/product/product83.jpg') }}">
+        </a>
+        <div class="product-name">Detergent Powder 1kg</div>
+        <div class="product-price">Rs.390.00</div>
+    </div>
+
+
+<a href="{{ url_for('product_detail', product_id=84) }}" class="product-link">
+    <div class="product-card">
+        <img src="{{ url_for('static', filename='images/product/product84.jpg') }}">
+        <div class="product-name">Floor Cleaner</div>
+        <div class="product-price">Rs.450.00</div>
+    </div>
+</a>
+
+<a href="{{ url_for('product_detail', product_id=85) }}" class="product-link">
+    <div class="product-card">
+        <img src="{{ url_for('static', filename='images/product/product85.jpg') }}">
+       </a>
+        <div class="product-name">Dish Wash Liquid</div>
+        <div class="product-price">Rs.320.00</div>
+    </div>
+
+
+<a href="{{ url_for('product_detail', product_id=86) }}" class="product-link">
+    <div class="product-card">
+        <img src="{{ url_for('static', filename='images/product/product86.jpg') }}">
+        </a>
+        <div class="product-name">Tissue Box</div>
+        <div class="product-price">Rs.180.00</div>
+    </div>
+
+
+<a href="{{ url_for('product_detail', product_id=87) }}" class="product-link">
+    <div class="product-card">
+        <img src="{{ url_for('static', filename='images/product/product87.jpg') }}">
+        </a>
+        <div class="product-name">Paper Towels</div>
+        <div class="product-price">Rs.240.00</div>
+    </div>
+
+
+<a href="{{ url_for('product_detail', product_id=88) }}" class="product-link">
+    <div class="product-card">
+      
+        <img src="{{ url_for('static', filename='images/product/product88.jpg') }}">
+        </a>
+        <div class="product-name">Trash Bags</div>
+        <div class="product-price">Rs.260.00</div>
+    </div>
+
+
+<a href="{{ url_for('product_detail', product_id=89) }}" class="product-link">
+    <div class="product-card">
+        <img src="{{ url_for('static', filename='images/product/product89.jpg') }}">
+       </a>
+        <div class="product-name">Mosquito Coil</div>
+        <div class="product-price">Rs.190.00</div>
+    </div>
+
+
+<a href="{{ url_for('product_detail', product_id=90) }}" class="product-link">
+    <div class="product-card">
+     
+        <img src="{{ url_for('static', filename='images/product/product90.jpg') }}">
+</a>
+        <div class="product-name">Air Freshener</div>
+        <div class="product-price">Rs.420.00</div>
+    </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
     
     </section>
 
